--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -25,9 +25,10 @@
       <th class="text-center">展示图</th>
       <th class="text-center">编号</th>
       <th class="text-center">名称</th>
+      <th class="text-center">课程负责人</th>      
       <th class="text-center">描述</th>
       <th class="text-center">精品课程</th>
-      <th class="text-center">精品课程申报中</th>
+      <th class="text-center">申报精品课程中</th>
       <th class="text-center">子课程</th>
       <th class="text-center" colspan="2">操作</th>
     </tr>
