--- a/app/assets/stylesheets/application/apply_courses.scss
+++ b/app/assets/stylesheets/application/apply_courses.scss
@@ -1,9 +1,36 @@
 .apply_courses__index{
 	.apply{
 		background-color: #fff;
-		padding: 20px;
+		padding: 30px 20px;
+		.m-tabs{
+			background-color: #6A94C1;
+			border-bottom: none;
+			padding-top: 5px;
+  			padding-left: 115px;
+			li{
+  				margin-bottom: 0;		
+				a{
+					color: #fff;
+					border: none;
+					border-radius: 0;
+					&:hover{
+						background-color: darken(#6A94C1, 0.3);
+						border: none;
+						margin-bottom: 0;
+					}
+				}
+			}
+			li.active > a{
+				color: #6A94C1;
+				border: none;
+				&:hover{
+					background-color: #fff;
+					border: none;
+				}
+			}
+		}
 		.apply-tab{
-			margin: 20px 0;
+			margin: 30px 0;
 			.tab-content{
 				padding: 0 10px;
 				padding-bottom: 20px;
@@ -11,9 +38,10 @@
 				border-top: none;
 			}
 			.item > li{
+				width: 5%;
 			}
 			.apply-nav{
-				padding: 6px 0;
+				padding: 10px 0;
 				font-size: 12px;
 			}
 			.apply-item{
