--- a/app/views/admin/courses/_course.html.erb
+++ b/app/views/admin/courses/_course.html.erb
@@ -8,6 +8,7 @@
   </td>
   <td><%= course.number %></td>
   <td><%= course.name %></td>
+  <td><%= course.try(:manager).try(:name) %></td>
   <td><%= course.description.to_s[0..20] %></td>
   <td><%= course.excellented ? "是" : "否" %></td>
   <td><%= course.applied ? "是" : "否" %></td>
