--- a/app/views/apply_courses/index.html.erb
+++ b/app/views/apply_courses/index.html.erb
@@ -6,7 +6,7 @@
 	<div class="apply-tab">
 
 		<!-- Nav tabs -->
-		<ul class="nav nav-tabs" role="tablist">
+		<ul class="nav nav-tabs m-tabs" role="tablist">
 			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">市级精品课程</a></li>
 			<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">校级精品课程</a></li>
 		</ul>
@@ -24,10 +24,14 @@
 				<% @apply_courses.each do |apply_course|%>
 					<ul class="nav nav-justified item apply-item text-center">
 						<li><%= apply_course.name %></li>
-						<li><%= apply_course.try(:academy).name %></li>
-						<li><%= "课程负责人"%></li>
-						<li><%= apply_course.try(:teacher).try(:name) %></li>
-						<li><%= %></li>
+						<li><%= apply_course.try(:academy).try(:name) %></li>
+						<li><%= apply_course.try(:manager).try(:name) %></li>
+						<li>
+							<% apply_course.teacher_courses.each do |teacher_course| %>
+								<%= teacher_course.try(:teacher).try(:name) %>
+							<% end %>
+						</li>
+						<li><%= apply_course.created_at.to_date.to_s(:db) %></li>
 					</ul>
 				<% end %>
 			</div>
