add academy_code to Academy

--- a/app/views/admin/academies/_academy.html.erb
+++ b/app/views/admin/academies/_academy.html.erb
@@ -1,5 +1,6 @@
 <tr>
   <td><%= academy.try(:school).name %></td>
+  <td><%= academy.academy_code %></td>
   <td><%= academy.name %></td>
   <td>
     <%#= link_to [:admin, academy], class: 'btn btn-xs btn-info', title: '查看' do %>
