--- a/app/views/admin/academies/index.html.erb
+++ b/app/views/admin/academies/index.html.erb
@@ -23,6 +23,7 @@
   <thead>
     <tr>
       <th class="text-center">学校名称</th>
+      <th class="text-center">院系代码</th>
       <th class="text-center">学院（系部）名称</th>
       <th class="text-center" colspan="2">操作</th>
     </tr>
