course show fix

--- a/app/views/apply_courses/index.html.erb
+++ b/app/views/apply_courses/index.html.erb
@@ -36,7 +36,7 @@
 				<% end %>
 			</div>
 			<div role="tabpanel" class="tab-pane" id="profile">
-				<h1>校级精品课程</h1>				
+				<label style="padding-top: 20px;">暂无校级精品课程</label>
 			</div>
 		</div>
 
