--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -56,9 +56,8 @@
   </div>
 
   <div id="courseList" class="vedio-course-content wrapper">
-    <%= render @courses %>
+    <%= render partial: "course" %>
   </div>
-  <%= paginate @courses %>
 </div>
 
 <%= link_to "", "#", id: "ajaxIndex", style: "display: none;", remote: true, format: :js %>
