--- a/app/views/courses/index.js.erb
+++ b/app/views/courses/index.js.erb
@@ -1,1 +1,1 @@
-$('#courseList').html("<%= escape_javascript(render @courses) %>");
+$('#courseList').html("<%= escape_javascript(render partial: 'course' ) %>");
