modify courses video css

--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -44,6 +44,7 @@ body.courses__index, body.courses__learning_center, body.teachers__index {
     }
 
     .single-vedio-content {
+      margin: 0 -8px;
       .vedio-content {
         height: 270px;
         width: 370px;
