--- a/app/views/teachers/_teacher.html.erb
+++ b/app/views/teachers/_teacher.html.erb
@@ -1,4 +1,13 @@
-<li>
-  <%= link_to image_tag(teacher.image.avatar.url(:t_170_220)), show_teachers_path(teacher.number) if teacher.image%>
-  <p><%= teacher.name %>(<%= teacher.final_degree %>)</p>
-</li>
+<div id="teachers-list">
+	<ul class="teachers-list">
+		<% teachers.each do |teacher|%>
+			<li>
+			  <%= link_to image_tag(teacher.image.avatar.url(:t_170_220)), show_teachers_path(teacher.number) if teacher.image%>
+			  <p><%= teacher.name %>(<%= teacher.final_degree %>)</p>
+			</li>
+		<% end %>
+	</ul>
+	<div class="text-center">
+		<%= paginate teachers %>
+	</div>
+</div>
