--- a/app/views/teachers/index.js.erb
+++ b/app/views/teachers/index.js.erb
@@ -1,1 +1,1 @@
-$('.teachers-list').html("<%= escape_javascript(render @teachers) %>");
+$('#teachers-list').replaceWith("<%= escape_javascript(render partial: 'teacher', locals: {teachers: @teachers}) %>");
