--- a/app/views/apply_courses/index.html.erb
+++ b/app/views/apply_courses/index.html.erb
@@ -14,7 +14,7 @@
 		<!-- Tab panes -->
 		<div class="tab-content">
 			<div role="tabpanel" class="tab-pane active" id="home">
-				<ul class="nav nav-justified apply-nav item text-center text-muted">
+				<ul class="nav nav-justified apply-nav item text-muted">
 					<li>课程名称</li>
 					<li>院系</li>
 					<li>所属专业</li>
@@ -22,13 +22,15 @@
 					<li>申报时间</li>
 				</ul>
 				<% @apply_courses.each do |apply_course|%>
-					<ul class="nav nav-justified item apply-item text-center">
-						<li><%= apply_course.name %></li>
-						<li><%= apply_course.try(:academy).try(:name) %></li>
-						<li><%= apply_course.try(:specialty).try(:name) %></li>
-						<li><%= apply_course.try(:manager).try(:name) %></li>
-						<li><%= apply_course.created_at.to_date.to_s(:db) %></li>
-					</ul>
+					<%= link_to show_courses_path(apply_course.number) do %>
+						<ul class="nav nav-justified item apply-item">
+							<li><%= apply_course.name %></li>
+							<li><%= apply_course.try(:academy).try(:name) %></li>
+							<li><%= apply_course.try(:specialty).try(:name) %></li>
+							<li><%= apply_course.try(:manager).try(:name) %></li>
+							<li><%= apply_course.created_at.to_date.to_s(:db) %></li>
+						</ul>
+					<% end %>
 				<% end %>
 			</div>
 			<div role="tabpanel" class="tab-pane" id="profile">
