--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -92,6 +92,12 @@
 		</div>
 	</div>
 	<div class="form-group">
+		<%= f.label :applied_date, '申报时间', class: "col-sm-2 control-label" %>
+		<div class="col-sm-4">
+			<%= f.date_field :applied_date, class: "form-control" %>
+		</div>
+	</div>
+	<div class="form-group">
 		<%= f.label :description, '课程描述', class: 'col-sm-2 control-label' %>
 		<div class="col-sm-4">
 			<%= f.text_area :description, size: '80x6', class: 'form-control' %>
