--- a/app/views/admin/sub_courses/index.html.erb
+++ b/app/views/admin/sub_courses/index.html.erb
@@ -28,6 +28,7 @@
 <table class="table table-hover table-bordered text-center">
 	<thead>
 		<tr>
+		  <th class="text-center">排序</th>
 			<th class="text-center">编号</th>
 			<th class="text-center">名称</th>
 			<th class="text-center">分类</th>
