--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -27,8 +27,8 @@
       <th class="text-center">名称</th>
       <th class="text-center">课程负责人</th>      
       <th class="text-center">描述</th>
-      <th class="text-center">精品课程</th>
-      <th class="text-center">申报精品课程中</th>
+      <th class="text-center">校级精品课程</th>
+      <th class="text-center">市级精品课程</th>
       <th class="text-center">子课程</th>
       <th class="text-center" colspan="2">操作</th>
     </tr>
