--- a/app/views/courses/1/_course_team.html.erb
+++ b/app/views/courses/1/_course_team.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-sm-12">
     <% teacher_courses.each do |teacher_course|%>
-			<div class="col-sm-3 text-center" style="margin-bottom: 10px; float: right;"><%= image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).url(:t_220_220))%>
+			<div class="col-sm-3 text-center" style="margin-bottom: 10px; float: right;"><%= image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).try(:url, :t_220_220))%>
 			</div>
 	  <% end %>
 	</div>
